# aula_rust

./: .gitignore  olamundo_nome
book/: Cargo.toml
book/src/: main.rs
calculadora/: Cargo.toml
calculadora/src/: main.rs
dart_rust/: Cargo.toml  pubspec.yaml
dart_rust/src/: lib.rs
fluxo/: Cargo.toml
functions/: Cargo.toml
functions/src/: main.rs
hello_word/: Cargo.toml
hello_word/src/: main.rs
jokenpo/: Cargo.toml
jokenpo/src/: main.rs
jokenpo_2/: Cargo.toml
jokenpo_2/src/: main.rs
rs/: book.rs  estuturas_de_repedicao.rs  fluxo.rs  if.rs  match.rs  olamundo_nome.rs  operacaoes_aritmeticas_de_bit.rs  ord.rs  pessoa.rs  tipos.rs  traits.rs  vetores.rs
time/: Cargo.toml
time/src/: main.rs
traits/: Cargo.toml
vetores/: Cargo.toml
vetores/src/: main.rs
wmctrl/: Cargo.toml
wmctrl/src/: main.rs
xcb_util/: Cargo.toml
xcb_util/src/: main.rs
