[package]
name = "rusty_ffi"
version = "0.1.0"
authors = ["Pedro Marinho <pedro.marinho238@gmail.com>"]
edition = "2018"

[lib]
name = "play_once"
crate-type = ["cdylib"] #dynamic library

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rodio = "0.11.0"#added rodio library
